<resources>
    <string name="app_name">Life Photos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="photo_wanted_edit_text_preference_key">photo_wanted_edit_text_preference_key</string>
    <string name="photo_wanted_switch_preference_key">photo_wanted_switch_preference_key</string>

    <string name="unsplash_image">Unsplash Image</string>
    <string name="share_via">Share by</string>

    <string name="all_photo_toolbar_title">My Unsplash</string>
    <string name="favorite_toolbar_title">Favorite</string>
    <string name="wanted_photo_toolbar_title">Wanted Photos</string>
    <string name="photo_by">Photo by %1$s on Unsplash</string>

    <string name="wallpaper_photos_from">Your wallpapers are from</string>
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
    <string name="schedule_success_message">Schedule success!</string>
    <string name="choose_interval">Choose interval</string>
    <string name="not_enough_interval_30seconds">Interval must be greater than 30 seconds</string>
    <string name="not_enough_interval_15minutes">Interval must be greater than 15 minutues</string>
    <string name="wallpaper_title">Wallpaper</string>
    <string name="about_title">About</string>
    <string name="interval">Interval</string>
    <string name="author_tab_lable">Author</string>
    <string name="life_photo_tab_lable">Life Photos</string>
    <string name="wallpaper_label">Wallpaper:</string>
    <string name="favorite_label">Favorite:</string>
    <string name="wanted_label">Wanted:</string>
    <string name="wallexplain"> You can set photo as wallpaper by 2 ways:\nThe first way is tapping any photo to move to photo detail page. From there, tap on the three dot icon at the top right corner then select \"Set Wallpaper\"\nThe second way is choosing \"Wallpaper\" section in menu. Choose your source of photos, interval then tap start button.</string>
    <string name="favoriteexplain">You can choose which photo you like by tapping the heart icon at the bottom right in photo detail page.
Your favorite photos will appear in \"Favorites\" section in menu.</string>
    <string name="wantedexplain">You can view all photos which relate to a keyword, such as \"flower\", \"forest\", \"building\"...
Set your keyword in \"Settings\" then view \"Wanted Photos\" in \"Wanted Photos\" section in menu</string>
    <string name="introduction">Life Photos gets more than 500.000 photos from https://unsplash.com/ gifted by the world’s most generous community of photographers.\n\nHere are some tips to use Life Photos:</string>
    <string name="author_explain">My name\'s Quang. I live in Ho Chi Minh City, Viet Nam. I am looking for a job as Android Developer.\nPlease contact me at: quangtuongdinh116@gmail.com\nThank you for your concern.</string>
    <string name="filter">Filter</string>
    <string name="type">Type</string>
    <string name="sort">Sort</string>
    <string name="apply">Apply</string>

    <string name="spinner_random">500.000 Photos</string>
    <string name="spinner_favorite">Favorites</string>
    <string name="spinner_wanted">Wanted Photos</string>

</resources>
