<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallpaper_photos_from"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/black"
            android:layout_marginRight="5dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ></Spinner>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp">

        <TextView
            android:text="@string/interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/interval_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_interval"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>



    <Button
        android:id="@+id/start_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:textSize="15dp"/>

</LinearLayout>