<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:windowBackground"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/filter_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/filter"
            android:textAlignment="center"
            app:titleTextColor="@android:color/white"
            android:layout_gravity="center"
            android:gravity="center"
            >


            <com.forabetterlife.dtq.myunsplash.widgets.FontTextView
                android:id="@+id/filter_sheet_apply_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_xs_large"
                android:background="?selectableItemBackground"
                android:padding="@dimen/spacing_normal"
                android:text="@string/apply"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                />


        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_xs_large"
        android:paddingStart="@dimen/spacing_xs_large"
        android:paddingTop="@dimen/spacing_normal">

        <com.forabetterlife.dtq.myunsplash.widgets.FontTextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/type"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/type_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sort_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_xs_large"
        android:paddingStart="@dimen/spacing_xs_large"
        android:paddingTop="@dimen/spacing_normal">

        <com.forabetterlife.dtq.myunsplash.widgets.FontTextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/sort"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sort_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>



</LinearLayout>